--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
         </div>
     </div>
 
+
+    <script src="/vanilla-tilt.min.js"></script>
+    <script>
+        VanillaTilt.init(document.querySelectorAll(".box"), {
+            max: 25,
+            speed: 400
+        });
+    </script>
+
 </body>
 
 </html>
