--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -5,14 +5,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 
 <body>
 
+    <section>
+        <!-- Swiper -->
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <div class="tetimonialBox">
+                        <img src="" alt="" class="quote">
+                        <div class="content">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia cumque expedita, officiis quasi adipisci facere magni omnis hic optio. Molestias officiis distinctio dolore quo consequatur dolorum neque reprehenderit minima
+                                cum.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-
+    </section>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script>
+        var swiper = new Swiper('.swiper-container', {
+            effect: 'coverflow',
+            grabCursor: true,
+            centeredSlides: true,
+            slidesPerView: 'auto',
+            coverflowEffect: {
+                rotate: 50,
+                stretch: 0,
+                depth: 100,
+                modifier: 1,
+                slideShadows: true,
+            },
+            pagination: {
+                el: '.swiper-pagination',
+            },
+        });
+    </script>
 </body>
+
 
 </html>
