--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -18,11 +18,95 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <div class="tetimonialBox">
-                        <img src="" alt="" class="quote">
+                        <img src="/img/quote.png" alt="" class="quote">
                         <div class="content">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia cumque expedita, officiis quasi adipisci facere magni omnis hic optio. Molestias officiis distinctio dolore quo consequatur dolorum neque reprehenderit minima
-                                cum.
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia cumqequatur dolorum neque reprehenderit minimacum.
                             </p>
+                            <div class="details">
+                                <div class="imgBx">
+                                    <img src="/img/le.png" alt="">
+                                </div>
+                                <h3>Leandro Santos<br> <span>Devoloper</span></h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="swiper-slide">
+                    <div class="tetimonialBox">
+                        <img src="/img/quote.png" alt="" class="quote">
+                        <div class="content">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia cumqequatur dolorum neque reprehenderit minimacum.
+                            </p>
+                            <div class="details">
+                                <div class="imgBx">
+                                    <img src="/img/le.png" alt="">
+                                </div>
+                                <h3>Leandro Santos<br> <span>Devoloper</span></h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="swiper-slide">
+                    <div class="tetimonialBox">
+                        <img src="/img/quote.png" alt="" class="quote">
+                        <div class="content">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia cumqequatur dolorum neque reprehenderit minimacum.
+                            </p>
+                            <div class="details">
+                                <div class="imgBx">
+                                    <img src="/img/le.png" alt="">
+                                </div>
+                                <h3>Leandro Santos<br> <span>Devoloper</span></h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="swiper-slide">
+                    <div class="tetimonialBox">
+                        <img src="/img/quote.png" alt="" class="quote">
+                        <div class="content">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia cumqequatur dolorum neque reprehenderit minimacum.
+                            </p>
+                            <div class="details">
+                                <div class="imgBx">
+                                    <img src="/img/le.png" alt="">
+                                </div>
+                                <h3>Leandro Santos<br> <span>Devoloper</span></h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="tetimonialBox">
+                        <img src="/img/quote.png" alt="" class="quote">
+                        <div class="content">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia cumqequatur dolorum neque reprehenderit minimacum.
+                            </p>
+                            <div class="details">
+                                <div class="imgBx">
+                                    <img src="/img/le.png" alt="">
+                                </div>
+                                <h3>Leandro Santos<br> <span>Devoloper</span></h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="swiper-slide">
+                    <div class="tetimonialBox">
+                        <img src="/img/quote.png" alt="" class="quote">
+                        <div class="content">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia cumqequatur dolorum neque reprehenderit minimacum.
+                            </p>
+                            <div class="details">
+                                <div class="imgBx">
+                                    <img src="/img/le.png" alt="">
+                                </div>
+                                <h3>Leandro Santos<br> <span>Devoloper</span></h3>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -38,15 +122,14 @@
             centeredSlides: true,
             slidesPerView: 'auto',
             coverflowEffect: {
-                rotate: 50,
+                rotate: 0,
                 stretch: 0,
                 depth: 100,
-                modifier: 1,
+                modifier: 2,
                 slideShadows: true,
             },
-            pagination: {
-                el: '.swiper-pagination',
-            },
+            loop: true,
+
         });
     </script>
 </body>
