--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -13,6 +13,7 @@
     <section>
         <div class="card">
             <div class="face front"></div>
+            <div class="face back"></div>
         </div>
     </section>
 
