--- a/Project 5/passeio.html
+++ b/Project 5/passeio.html
@@ -15,6 +15,9 @@
                             <p>Passeio Regular <strong> Trancoso</strong></p>
                         </div>
                     </div>
+                    <div class="text_passeio">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quidem assumenda quasi hic, nulla sapiente enim, doloremque provident quas repellendus debitis asperiores. Voluptate vitae nostrum commodi voluptatibus totam fuga incidunt?</p>
+                    </div>
                     <div class="az_td_mod_006_card_3-text_2">
                         <h3>Por:</h3>
                         &nbsp;
@@ -23,7 +26,7 @@
                         <div class="btn_passeio"> <a class="az_btn_reais_3" href=" " target="_blank">Compre já</a></div>
                     </div>
                 </div>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda rem maxime repellat odio, sed distinctio recusandae est adipisci veniam quo, sit quasi autem. Ut sunt facere, alias dolores esse doloribus!</p>
+
             </div>
 
             <div class="az_td_mod_006_card_3">
@@ -33,6 +36,9 @@
                             <p>Rota da Aldeia <strong> </strong></p>
                         </div>
                     </div>
+                    <div class="text_passeio">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quidem assumenda quasi hic, nulla sapiente enim, doloremque provident quas repellendus debitis asperiores. Voluptate vitae nostrum commodi voluptatibus totam fuga incidunt?</p>
+                    </div>
                     <div class="az_td_mod_006_card_3-text_2">
                         <h3>Por:</h3>
                         &nbsp;
@@ -40,7 +46,8 @@
                         <p>pontos por pessoa</p>
                         <div class="btn_passeio"> <a class="az_btn_reais_3" href=" " target="_blank">Compre já</a></div>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quidem assumenda quasi hic, nulla sapiente enim, doloremque provident quas repellendus debitis asperiores. Voluptate vitae nostrum commodi voluptatibus totam fuga incidunt?</p>
+
+
                 </div>
             </div>
     </section>
