--- a/Project 6/index.html
+++ b/Project 6/index.html
@@ -10,7 +10,13 @@
 </head>
 
 <body>
-
+    <section>
+        <img id="bg" src="/img/bg.jpg" alt="">
+        <img id="moon" src="/img/moon.png" alt="">
+        <img id="cloud1" src="/img/cloud1.png" alt="">
+        <img id="cloud2" src="/img/cloud2.png" alt="">
+        <img id="aviao" src="/img/aviao2.png" alt="">
+    </section>
 </body>
 
 </html>
