--- a/Project 6/index.html
+++ b/Project 6/index.html
@@ -16,6 +16,7 @@
         <img id="cloud1" src="/img/cloud1.png" alt="">
         <img id="cloud2" src="/img/cloud2.png" alt="">
         <img id="aviao" src="/img/aviao2.png" alt="">
+        <div id="tree"></div>
     </section>
 </body>
 
