--- a/Project 6/index.html
+++ b/Project 6/index.html
@@ -17,6 +17,7 @@
         <img id="cloud2" src="/img/cloud2.png" alt="">
         <img id="aviao" src="/img/aviao2.png" alt="">
         <div id="tree"></div>
+        <h2 id="text">Bem- Vindos</h2>
     </section>
 </body>
 
