--- a/Project 6/index.html
+++ b/Project 6/index.html
@@ -19,6 +19,30 @@
         <div id="tree"></div>
         <h2 id="text">Bem- Vindos</h2>
     </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
+    <script>
+        gsap.to('#moon', {
+            scrollTrigger: {
+                scrub: 1
+            },
+            scale: 1.5,
+        })
+
+        gsap.to('#bg', {
+            scrollTrigger: {
+                scrub: 1
+            },
+            scale: 1.1,
+        })
+
+        gsap.to('#aviao', {
+            scrollTrigger: {
+                scrub: 1
+            },
+            scale: 1.1,
+        })
+    </script>
 </body>
 
 </html>
