--- a/script/Classes e Atributos/Project 1/index.html
+++ b/script/Classes e Atributos/Project 1/index.html
@@ -13,7 +13,7 @@
 
 
 
-    <nav class="menu">
+    <nav class="menu azul">
         <ul>
             <li>
                 <a href="#animais">Animais</a>
@@ -30,7 +30,7 @@
         </ul>
     </nav>
 
-    <section class="grid-section animais" id="animais">
+    <section class="grid-section animais" id="animais" data-texto="Teste">
 
         <h1 class="titulo">Animais Fantásticos</h1>
 
@@ -142,10 +142,9 @@
         <p>Todos os direitos reservados.</p>
     </footer>
     <script src="script/main.js"></script>
-    <script src="script/aula.js"></script>
-    <script src="script/exercicio.js"></script>
 
 
+    <script src="script/script.js"></script>
 </body>
 
 </html>
