--- a/script/Classes e Atributos/Project 1/index.html
+++ b/script/Classes e Atributos/Project 1/index.html
@@ -25,7 +25,7 @@
                 <a href="#contato">Contato</a>
             </li>
             <li>
-                <a href="#">Site</a>
+                <a href="https://www.origamid.com/curso/javascript-completo-es6/0305-classes-e-atributos/">Site</a>
             </li>
         </ul>
     </nav>
@@ -36,7 +36,7 @@
 
         <ul class="animais-lista">
             <li>
-                <img src="img/imagem1.jpg" alt="">
+                <img src="img/imagem1.jpg" alt="Lobo">
             </li>
             <li>
                 <img src="img/imagem2.jpg" alt="">
