--- a/script/Dimensões e Distâncias 1/index.html
+++ b/script/Dimensões e Distâncias 1/index.html
@@ -142,8 +142,8 @@
         <p>Todos os direitos reservados.</p>
     </footer>
     <script src="script/main.js"></script>
-    <script src="script/aula.js"></script>
-    <script src="script/exercicio.js"></script>
+
+    <script src="script/script.js"></script>
 
 
 </body>
