--- a/script/Evento 1/index.html
+++ b/script/Evento 1/index.html
@@ -141,11 +141,9 @@
     <footer class="copy">
         <p>Todos os direitos reservados.</p>
     </footer>
-    <script src="script/main.js"></script>
 
-    <script src="script/script.js"></script>
 
-    <script src="script/eventos1.js"></script>
+    <script src="script/evento1.js"></script>
 
 
 </body>
