--- a/script/Evento 1/index.html
+++ b/script/Evento 1/index.html
@@ -6,13 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Project 1 JavaScript</title>
+    <title>Evento 1</title>
 </head>
 
 <body>
-
-
-
     <nav class="menu">
         <ul>
             <li>
@@ -142,9 +139,7 @@
         <p>Todos os direitos reservados.</p>
     </footer>
 
-
     <script src="script/evento1.js"></script>
-
 
 </body>
 
