--- a/script/Navegação por Tabs/index.html
+++ b/script/Navegação por Tabs/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
     <title>Navegação por tabs</title>
+    <script>
+        document.documentElement.className += 'js';
+    </script>
 </head>
 
 <body>
@@ -31,7 +34,7 @@
 
         <h1 class="titulo">Animais Fantásticos</h1>
 
-        <ul class="animais-lista">
+        <ul class="animais-lista js-tabmenu">
             <li>
                 <img src="img/imagem1.jpg" alt="">
             </li>
@@ -52,48 +55,48 @@
             </li>
         </ul>
 
-        <div class="animais-descricao">
+        <div class="animais-descricao js-tabcontent">
             <section>
                 <h2>Raposa</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
+                <p>RaposaLorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
+                <p>RaposaLorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
             </section>
             <section>
                 <h2>Esquilo</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
+                <p>EsquiloLorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
+                <p>EsquiloLorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
             </section>
             <section>
                 <h2>Urso</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
+                <p>UrsoLorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
+                <p>UrsoLorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
             </section>
             <section>
                 <h2>Lobo</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
+                <p>LoboLorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
+                <p>LoboLorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
             </section>
             <section>
                 <h2>Macaco</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
+                <p>MacacoLorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
+                <p>MacacoLorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
             </section>
             <section>
                 <h2>Leão</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
+                <p>LeãoLorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
+                <p>LeãoLorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem officiis harum optio nisi cumque deleniti nesciunt aspernatur qui debitis ipsa!</p>
             </section>
         </div>
     </section>
