--- a/script/Navegação por Tabs/index.html
+++ b/script/Navegação por Tabs/index.html
@@ -104,7 +104,7 @@
     <section class="grid-section faq" id="faq">
 
         <h1 class="titulo">Faq</h1>
-        <dl class="faq-lista">
+        <dl class="faq-lista js-accordion">
             <dt>Qual a idade</dt>
             <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, sint.</dd>
             <dt>Eles são Fantáticos</dt>
